# code-challenge-starter-python-flask

./: .env.example  .pylintrc  LICENSE  README.md  config.py  flask_app.py  mypy.ini  pyproject.toml
alembic/: env.py
src/abstract/adapter/: base.py
test/: test_flask_app.py
test/approvals/: test_flask_app.test_default_route.approved.txt
